examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__integers@-1j.snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                UnaryOperator(
                                    UnaryOperator {
                                        argument: Integer(
                                            Integer {
                                                [RANGE]
                                            },
                                        ),
                                        operator: Token_Minus(
                                            Token_Minus {
                                                [RANGE]
                                            },
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
