examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__list_comprehensions@[a for a in lambda: True, lambda: False if a()].snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                ListComprehension(
                                    ListComprehension {
                                        body: PrimaryExpression(
                                            Identifier(
                                                Identifier {
                                                    [RANGE]
                                                },
                                            ),
                                        ),
                                        children: [
                                            ForInClause(
                                                ForInClause {
                                                    left: Pattern(
                                                        Identifier(
                                                            Identifier {
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    right: [
                                                        Expression(
                                                            Lambda(
                                                                Lambda {
                                                                    body: PrimaryExpression(
                                                                        True(
                                                                            True {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                    parameters: None,
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                        Token_Comma(
                                                            Token_Comma {
                                                                [RANGE]
                                                            },
                                                        ),
                                                        Expression(
                                                            Lambda(
                                                                Lambda {
                                                                    body: PrimaryExpression(
                                                                        False(
                                                                            False {
                                                                                [RANGE]
                                                                            },
                                                                        ),
                                                                    ),
                                                                    parameters: None,
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ],
                                                    [RANGE]
                                                },
                                            ),
                                            IfClause(
                                                IfClause {
                                                    children: PrimaryExpression(
                                                        Call(
                                                            Call {
                                                                function: Identifier(
                                                                    Identifier {
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                                arguments: ArgumentList(
                                                                    ArgumentList {
                                                                        children: [],
                                                                        [RANGE]
                                                                    },
                                                                ),
                                                                [RANGE]
                                                            },
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
