examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__lists@[*[]].snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                List(
                                    List {
                                        children: [
                                            ListSplat(
                                                ListSplat {
                                                    children: Expression(
                                                        PrimaryExpression(
                                                            List(
                                                                List {
                                                                    children: [],
                                                                    [RANGE]
                                                                },
                                                            ),
                                                        ),
                                                    ),
                                                    [RANGE]
                                                },
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
