examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__literals__lists@[*a.b].snap
---
source: src/tests/corpus/literals.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            ExpressionStatement(
                ExpressionStatement {
                    children: [
                        Expression(
                            PrimaryExpression(
                                List(
                                    List {
                                        children: [
                                            Expression(
                                                PrimaryExpression(
                                                    Attribute(
                                                        Attribute {
                                                            attribute: Identifier {
                                                                [RANGE]
                                                            },
                                                            object: ListSplat(
                                                                ListSplat {
                                                                    children: Identifier(
                                                                        Identifier {
                                                                            [RANGE]
                                                                        },
                                                                    ),
                                                                    [RANGE]
                                                                },
                                                            ),
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ],
                                        [RANGE]
                                    },
                                ),
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
